Configure reverse DNS and add records for PtP links (#332)
* Add trusted ssh keys file

Signed-off-by: scottongithub <21364725+scottongithub@users.noreply.github.com>

* Update pinning for dns-auth

Signed-off-by: scottongithub <21364725+scottongithub@users.noreply.github.com>

* Configure reverse DNS policies on dns-rec

Signed-off-by: scottongithub <21364725+scottongithub@users.noreply.github.com>

* Update Influx's GPG key/hash

Signed-off-by: scottongithub <21364725+scottongithub@users.noreply.github.com>

* Add DNS A records to be converted to PTR records

Signed-off-by: scottongithub <21364725+scottongithub@users.noreply.github.com>

* Fix trusted_ssh_keys yaml notation

Signed-off-by: scottongithub <21364725+scottongithub@users.noreply.github.com>

* Add entire Ansible setup to the PR verify flow, so it can find ansible.posix.authorized_key

Signed-off-by: scottongithub <21364725+scottongithub@users.noreply.github.com>

---------

Signed-off-by: scottongithub <21364725+scottongithub@users.noreply.github.com>

--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -36,6 +36,9 @@ jobs:
       - name: Run kzonecheck on each zone file
         run: find . -type f -name "*.zone" -print0 | xargs -0L1 kzonecheck -v
 
+      - name: Setup ansible
+        run: pip install --require-hashes -r requirements.txt && export PATH="$HOME/.local/bin:$PATH" && ansible-galaxy collection install --force -r infra/ansible/roles/requirements.yml
+
       - name: Run ansible-lint
         uses: ansible/ansible-lint@a2bc8b8b13a80802215856c56823d85007d3baf5 # v25
         with:
